--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "function",
     "named parameters",
     "parameters",
-    "named arguments"
+    "named arguments",
+    "params",
+    "name params"
   ],
   "author": "rogerbf <roger@bergfalk.nu> (http://bergfalk.nu/)",
   "license": "MIT",
