--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "name-parameters",
-  "version": "0.0.1",
-  "description": "make function accept options object instead of parameters",
+  "version": "0.0.2",
+  "description": "make a function accept an options object",
   "main": "./distribution/index.js",
   "scripts": {
     "test": "jest --config .jest",
